--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,12 @@ else()
   message("Found SNPE at ${SNPE_ROOT}")
 endif()
 
+set(TENSORFLOW_ROOT $ENV{TENSORFLOW_ROOT})
+if(NOT DEFINED TENSORFLOW_ROOT)
+  message(FATAL_ERROR " TensorFlow cannot be found, please set TENSORFLOW_ROOT env variable")
+else()
+  message("Found TensorFlow at ${TENSORFLOW_ROOT}")
+endif()
 
 if (WIN32)
     if (NOT "${CMAKE_SIZEOF_VOID_P}" EQUAL "8")
@@ -142,4 +148,8 @@ if(DEFINED SNPE_ROOT)
   add_subdirectory(snpe_samples/snpe_hello_classification)
   add_subdirectory(snpe_samples/snpe_object_detection_ssd)
   add_subdirectory(snpe_backend)
+endif()
+
+if(DEFINED TENSORFLOW_ROOT)
+    add_subdirectory(tflite_samples/tflite_hello_classification)
 endif()
