fixed build of dldt tools if no TENSORFLOW_ROOT is defined

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,14 +64,14 @@ endif()
 
 set(SNPE_ROOT $ENV{SNPE_ROOT})
 if(NOT DEFINED SNPE_ROOT)
-  message(Warning " Not found SNPE, will ignore this flow")
+	message(Warning " SNPE cannot be found, please set SNPE_ROT environemnt variables to compile SNPE dedicated components")
 else()
   message("Found SNPE at ${SNPE_ROOT}")
 endif()
 
 set(TENSORFLOW_ROOT $ENV{TENSORFLOW_ROOT})
 if(NOT DEFINED TENSORFLOW_ROOT)
-  message(FATAL_ERROR " TensorFlow cannot be found, please set TENSORFLOW_ROOT env variable")
+	message(Warning " TensorFlow cannot be found, please set TENSORFLOW_ROOT env variable to compile Tensorflow Lite dedicated components")
 else()
   message("Found TensorFlow at ${TENSORFLOW_ROOT}")
 endif()
