--- a/tflite_samples/tflite_hello_classification/CMakeLists.txt
+++ b/tflite_samples/tflite_hello_classification/CMakeLists.txt
@@ -9,21 +9,27 @@ add_executable(tflite_hello_classification main.cpp)
 if(NOT OpenCV_FOUND)
   message(FATAL_ERROR "OPENCV is disabled or not found, " ${TARGET_NAME} " build is interrupted")
 else()
-    target_link_libraries(tflite_hello_classification PRIVATE ${OpenCV_LIBRARIES})
+  target_link_libraries(tflite_hello_classification PRIVATE ${OpenCV_LIBRARIES})
   target_compile_definitions(tflite_hello_classification PRIVATE USE_OPENCV)
 endif()
 
-# add SNPE headers to the lookup
+# add TFLite headers to the lookup
 include_directories(${TENSORFLOW_ROOT})
 include_directories(${TENSORFLOW_ROOT}/tensorflow/lite/tools/make/downloads/flatbuffers/include)
 
 if(NOT DEFINED ANDROID_NATIVE_API_LEVEL)
   target_link_libraries(tflite_hello_classification PRIVATE ${TENSORFLOW_ROOT}/bazel-out/k8-opt/bin/tensorflow/lite/libtensorflowlite.so)
 else()
-  target_link_libraries(tflite_hello_classification PRIVATE ${TENSORFLOW_ROOT}/bazel-out/arm64-v8a-opt/bin/tensorflow/lite/libtensorflowlite.so
-          ${TENSORFLOW_ROOT}/bazel-out/arm64-v8a-opt/bin/external/flatbuffers/src/libflatbuffers.a)
+  if (${ANDROID_ABI} STREQUAL "arm64-v8a")
+    target_link_libraries(tflite_hello_classification PRIVATE ${TENSORFLOW_ROOT}/bazel-out/arm64-v8a-opt/bin/tensorflow/lite/libtensorflowlite.so)
+  else()
+    target_link_libraries(tflite_hello_classification PRIVATE
+            ${TENSORFLOW_ROOT}/bazel-out/armeabi-v7a-opt/bin/tensorflow/lite/libtensorflowlite.so
+            ${TENSORFLOW_ROOT}/bazel-out/armeabi-v7a-opt/bin/tensorflow/lite/delegates/hexagon/libhexagon_delegate.a
+            ${TENSORFLOW_ROOT}/bazel-out/armeabi-v7a-opt/bin/tensorflow/lite/delegates/hexagon/libhexagon_implementation.a
+            ${TENSORFLOW_ROOT}/bazel-out/armeabi-v7a-opt/bin/tensorflow/lite/delegates/hexagon/libhexagon_delegate_kernel.a
+            ${TENSORFLOW_ROOT}/bazel-out/armeabi-v7a-opt/bin/tensorflow/lite/delegates/hexagon/libutils.a
+            ${TENSORFLOW_ROOT}/bazel-out/armeabi-v7a-opt/bin/tensorflow/lite/delegates/hexagon/builders/libop_builder.a
+    )
+  endif()
 endif()
-
-
-# target_link_libraries(snpe_hello_classification $(OpenCV_LIBS))
-#                            OPENCV_DEPENDENCIES imgcodecs)
