--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "thirdparty/gtest"]
 	path = thirdparty/gtest
 	url = https://github.com/google/googletest
+[submodule "thirdparty/yaml-cpp"]
+	path = thirdparty/yaml-cpp
+	url = https://github.com/elvin-n/yaml-cpp.git
