Add windows support for tvm_backend and validation app

--- a/tvm_backend/CMakeLists.txt
+++ b/tvm_backend/CMakeLists.txt
@@ -28,6 +28,8 @@ add_library(${TARGET_NAME} SHARED ${MAIN_SRC} ${MAIN_HEADERS} )
 target_compile_definitions(${TARGET_NAME} PUBLIC DMLC_USE_LOGGING_LIBRARY=<tvm/runtime/logging.h>)
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
   target_link_libraries(${TARGET_NAME} PRIVATE "${TVM_HOME}/build/libtvm_runtime.dylib")
+elseif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
+	target_link_libraries(${TARGET_NAME} PRIVATE "${TVM_HOME}/build/Release/tvm_runtime.lib")
 else()
   target_link_libraries(${TARGET_NAME} PRIVATE "${TVM_HOME}/build/libtvm_runtime.so")
 endif()
