Fixed make for snpe apps for arm64

--- a/snpe_samples/snpe_object_detection_ssd/CMakeLists.txt
+++ b/snpe_samples/snpe_object_detection_ssd/CMakeLists.txt
@@ -4,13 +4,15 @@ cmake_minimum_required(VERSION 2.8.12)
 # project(snpe_apps)
 find_package( OpenCV REQUIRED )
 
-add_executable(snpe_object_detection_ssd main.cpp)
+set (TARGET_NAME "snpe_object_detection_ssd")
+
+add_executable(${TARGET_NAME} main.cpp)
 
 if(NOT OpenCV_FOUND)
     message(FATAL_ERROR "OPENCV is disabled or not found, " ${TARGET_NAME} " build is interrupted")
 else()
-    target_link_libraries(snpe_object_detection_ssd PRIVATE ${OpenCV_LIBRARIES})
-    target_compile_definitions(snpe_object_detection_ssd PRIVATE USE_OPENCV)
+    target_link_libraries(${TARGET_NAME} PRIVATE ${OpenCV_LIBRARIES})
+    target_compile_definitions(${TARGET_NAME} PRIVATE USE_OPENCV)
 endif()
 
 # add SNPE headers to the lookup
@@ -24,13 +26,18 @@ endif()
 include_directories(${SNPE_ROOT}/include/zdl)
 
 if(NOT DEFINED ANDROID_NATIVE_API_LEVEL)
-  target_link_libraries(snpe_object_detection_ssd PRIVATE ${SNPE_ROOT}/lib/x86_64-linux-clang/libSNPE.so)
+  target_link_libraries(${TARGET_NAME} PRIVATE ${SNPE_ROOT}/lib/x86_64-linux-clang/libSNPE.so)
 else()
-  target_link_libraries(snpe_object_detection_ssd PRIVATE ${SNPE_ROOT}/lib/arm-android-clang6.0/libSNPE.so)
+  if (${ANDROID_ABI} STREQUAL "arm64-v8a")
+    target_link_libraries(${TARGET_NAME} PRIVATE ${SNPE_ROOT}/lib/aarch64-android-clang6.0/libSNPE.so)
+  else()
+    target_link_libraries(${TARGET_NAME} PRIVATE ${SNPE_ROOT}/lib/arm-android-clang6.0/libSNPE.so)
+  endif()
 endif()
 
 
-target_link_libraries(snpe_object_detection_ssd PRIVATE gflags)
+
+target_link_libraries(${TARGET_NAME} PRIVATE gflags)
 
 # target_link_libraries(snpe_object_detection_ssd $(OpenCV_LIBS))
 #                            OPENCV_DEPENDENCIES imgcodecs)
