--- a/snpe_backend/CMakeLists.txt
+++ b/snpe_backend/CMakeLists.txt
@@ -24,9 +24,10 @@ add_library(${TARGET_NAME} SHARED ${MAIN_SRC} ${MAIN_HEADERS} )
 if(NOT DEFINED ANDROID_NATIVE_API_LEVEL)
   target_link_libraries(${TARGET_NAME} PRIVATE ${SNPE_ROOT}/lib/x86_64-linux-clang/libSNPE.so)
 else()
-  target_link_libraries(${TARGET_NAME} PRIVATE ${SNPE_ROOT}/lib/arm-android-clang6.0/libSNPE.so)
+  if (${ANDROID_ABI} STREQUAL "arm64-v8a")
+    target_link_libraries(${TARGET_NAME} PRIVATE ${SNPE_ROOT}/lib/aarch64-android-clang6.0/libSNPE.so)
+  else()
+    target_link_libraries(${TARGET_NAME} PRIVATE ${SNPE_ROOT}/lib/arm-android-clang6.0/libSNPE.so)
+  endif()
 endif()
-
-
-
 
