proper config for inception v3

--- a/configs/incpetion-v3/accuracy-check.yml
+++ b/configs/incpetion-v3/accuracy-check.yml
@@ -31,16 +31,33 @@ models:
           - type: resize
             size: 299
 
-
-  - name: inceptionv3-tvm
+  - name: inceptionv3
     launchers:
       - framework: tvm
         adapter: classification
         device: OpenCL
-        model: inceptionv3-tvm-OpenCL
+        model: mace_inceptionv3.fp16.fp16
         inputs:
           - name: input
             layout: NHWC
+            shape: 1,299,299,3
+
+      - framework: snpe
+        adapter: classification
+        model: models/snpe/mace_inception-v3.dlc
+        inputs:
+          - name: input
+            layout: NHWC
+            shape: 1,299,299,3
+
+      - framework: tflite
+        adapter: classification
+        model: models/tflite/mace_inception-v3.tflite
+        inputs:
+          - name: input
+            layout: NHWC
+            shape: 1,299,299,3
+
 
       - framework: tvm
         adapter: classification
@@ -49,15 +66,16 @@ models:
         inputs:
           - name: input
             layout: NHWC
+            shape: 1,299,299,3
 
     datasets:
-      - name: imagenet_1000_classes
+      - name: imagenet_1001_classes
         preprocessing:
-          - type: bgr_to_rgb
           - type: crop
             central_fraction: 0.875
           - type: resize
             size: 299
+          - type: bgr_to_rgb
           - type: normalization
             mean: 127.5
             std: 127.5
