--- a/validation_app/CMakeLists.txt
+++ b/validation_app/CMakeLists.txt
@@ -40,7 +40,7 @@ add_executable(${TARGET_NAME} ${MAIN_SRC} ${MAIN_HEADERS})
 
 set_target_properties(${TARGET_NAME} PROPERTIES "CMAKE_CXX_FLAGS" "${CMAKE_CXX_FLAGS} -fPIE" 
 COMPILE_PDB_NAME ${TARGET_NAME})
-target_link_libraries(${TARGET_NAME} gflags ${OpenCV_LIBRARIES} yaml-cpp)
+target_link_libraries(${TARGET_NAME} gflags ${OpenCV_LIBRARIES} yaml-cpp log)
 if (UNIX)
     target_link_libraries(${TARGET_NAME} dl)
 endif()
